@@ -1,8 +1,8 @@
 /* makeinfo.h -- declarations for Makeinfo.
-   $Id: makeinfo.h,v 1.30 2007-09-15 23:48:45 karl Exp $
+   $Id: makeinfo.h,v 1.31 2008-03-26 23:57:12 karl Exp $
 
    Copyright (C) 1996, 1997, 1998, 1999, 2000, 2001, 2002, 2003, 2004,
-   2005, 2006, 2007 Free Software Foundation, Inc.
+   2005, 2006, 2007, 2008 Free Software Foundation, Inc.
 
    This program is free software: you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
@@ -367,7 +367,7 @@ extern void free_and_clear (char **pointer),
 extern int get_until (char *match, char **string),
   set_paragraph_indent (char *string),
   self_delimiting (int character),
-  search_forward (char *string, int from),
+  search_forward (const char *string, int from),
   search_forward_until_pos (char *string, int from, int end_pos),
   next_nonwhitespace_character (void),
   current_output_column (void),
